--- a/webscrapping/ass2/Selenium(ASS-2).ipynb
+++ b/webscrapping/ass2/Selenium(ASS-2).ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb2f9e8b",
+   "id": "790af4dc",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3a15070b",
+   "id": "0eb78d68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bef96816",
+   "id": "21ccf1cd",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9805df0f",
+   "id": "d3381d7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d6d96a92",
+   "id": "564ae943",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4ec72bb0",
+   "id": "e18d959d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f8cd0448",
+   "id": "630f6b36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "054d9e17",
+   "id": "3a6f1dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "aaad5952",
+   "id": "456d2614",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "62a20ed1",
+   "id": "48fcf2f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f5c4759a",
+   "id": "8bc7875f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "66fd1eed",
+   "id": "f521d3e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "77f20be7",
+   "id": "36dc8e98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f33f2348",
+   "id": "36828dde",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1ad919c6",
+   "id": "1fe77d88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "615b4b47",
+   "id": "53a638b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "15272d4d",
+   "id": "11a05a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b5ce3100",
+   "id": "0d7f3160",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "618b4cb5",
+   "id": "be224b29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "3418baf4",
+   "id": "633931f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "7d222271",
+   "id": "e5cf24ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "3f0c04e0",
+   "id": "78a7106b",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "f4b9779d",
+   "id": "20202461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7c268a51",
+   "id": "5ab03955",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4204a92c",
+   "id": "ed2e0b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "84db7d18",
+   "id": "c48581c1",
    "metadata": {},
    "outputs": [
     {
@@ -1546,8 +1546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "af7ce095",
+   "execution_count": 82,
+   "id": "9772027f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,8 +1571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "5d240454",
+   "execution_count": 83,
+   "id": "3d8c3367",
    "metadata": {},
    "outputs": [
     {
@@ -1600,6 +1600,7 @@
        "      <th>Sal_Record</th>\n",
        "      <th>Avg_Salary</th>\n",
        "      <th>Min_Salary</th>\n",
+       "      <th>Max_Salary</th>\n",
        "      <th>Exp_Req</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1610,6 +1611,7 @@
        "      <td>(based on 22 salaries)</td>\n",
        "      <td>₹ 31.7L</td>\n",
        "      <td>₹ 25.0L</td>\n",
+       "      <td>₹ 45.0L</td>\n",
        "      <td>based on 22 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1617,7 +1619,8 @@
        "      <td>Ab Inbev</td>\n",
        "      <td>(based on 53 salaries)</td>\n",
        "      <td>₹ 19.7L</td>\n",
-       "      <td>₹ 45.0L</td>\n",
+       "      <td>₹ 15.0L</td>\n",
+       "      <td>₹ 25.5L</td>\n",
        "      <td>based on 53 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1625,7 +1628,8 @@
        "      <td>Optum</td>\n",
        "      <td>(based on 48 salaries)</td>\n",
        "      <td>₹ 16.5L</td>\n",
-       "      <td>₹ 15.0L</td>\n",
+       "      <td>₹ 11.0L</td>\n",
+       "      <td>₹ 22.6L</td>\n",
        "      <td>based on 48 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1633,7 +1637,8 @@
        "      <td>ZS</td>\n",
        "      <td>(based on 33 salaries)</td>\n",
        "      <td>₹ 15.7L</td>\n",
-       "      <td>₹ 25.5L</td>\n",
+       "      <td>₹ 11.0L</td>\n",
+       "      <td>₹ 22.0L</td>\n",
        "      <td>based on 33 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1641,7 +1646,8 @@
        "      <td>Fractal Analytics</td>\n",
        "      <td>(based on 109 salaries)</td>\n",
        "      <td>₹ 15.2L</td>\n",
-       "      <td>₹ 11.0L</td>\n",
+       "      <td>₹ 9.0L</td>\n",
+       "      <td>₹ 23.0L</td>\n",
        "      <td>based on 109 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1649,7 +1655,8 @@
        "      <td>Tiger Analytics</td>\n",
        "      <td>(based on 65 salaries)</td>\n",
        "      <td>₹ 14.7L</td>\n",
-       "      <td>₹ 22.6L</td>\n",
+       "      <td>₹ 9.0L</td>\n",
+       "      <td>₹ 20.0L</td>\n",
        "      <td>based on 65 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1658,6 +1665,7 @@
        "      <td>(based on 11 salaries)</td>\n",
        "      <td>₹ 14.5L</td>\n",
        "      <td>₹ 11.0L</td>\n",
+       "      <td>₹ 20.0L</td>\n",
        "      <td>based on 11 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1665,7 +1673,8 @@
        "      <td>Tredence</td>\n",
        "      <td>(based on 12 salaries)</td>\n",
        "      <td>₹ 14.1L</td>\n",
-       "      <td>₹ 22.0L</td>\n",
+       "      <td>₹ 8.8L</td>\n",
+       "      <td>₹ 17.5L</td>\n",
        "      <td>based on 12 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1673,7 +1682,8 @@
        "      <td>UnitedHealth</td>\n",
        "      <td>(based on 91 salaries)</td>\n",
        "      <td>₹ 13.6L</td>\n",
-       "      <td>₹ 9.0L</td>\n",
+       "      <td>₹ 8.0L</td>\n",
+       "      <td>₹ 20.5L</td>\n",
        "      <td>based on 91 salaries)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1681,7 +1691,8 @@
        "      <td>Ford Motor</td>\n",
        "      <td>(based on 21 salaries)</td>\n",
        "      <td>₹ 13.5L</td>\n",
-       "      <td>₹ 23.0L</td>\n",
+       "      <td>₹ 10.0L</td>\n",
+       "      <td>₹ 18.0L</td>\n",
        "      <td>based on 21 salaries)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1691,30 +1702,30 @@
       "text/plain": [
        "                 Company_name               Sal_Record Avg_Salary Min_Salary  \\\n",
        "0                     Walmart   (based on 22 salaries)    ₹ 31.7L    ₹ 25.0L   \n",
-       "1                    Ab Inbev   (based on 53 salaries)    ₹ 19.7L    ₹ 45.0L   \n",
-       "2                       Optum   (based on 48 salaries)    ₹ 16.5L    ₹ 15.0L   \n",
-       "3                          ZS   (based on 33 salaries)    ₹ 15.7L    ₹ 25.5L   \n",
-       "4           Fractal Analytics  (based on 109 salaries)    ₹ 15.2L    ₹ 11.0L   \n",
-       "5             Tiger Analytics   (based on 65 salaries)    ₹ 14.7L    ₹ 22.6L   \n",
+       "1                    Ab Inbev   (based on 53 salaries)    ₹ 19.7L    ₹ 15.0L   \n",
+       "2                       Optum   (based on 48 salaries)    ₹ 16.5L    ₹ 11.0L   \n",
+       "3                          ZS   (based on 33 salaries)    ₹ 15.7L    ₹ 11.0L   \n",
+       "4           Fractal Analytics  (based on 109 salaries)    ₹ 15.2L     ₹ 9.0L   \n",
+       "5             Tiger Analytics   (based on 65 salaries)    ₹ 14.7L     ₹ 9.0L   \n",
        "6  Legato Health Technologies   (based on 11 salaries)    ₹ 14.5L    ₹ 11.0L   \n",
-       "7                    Tredence   (based on 12 salaries)    ₹ 14.1L    ₹ 22.0L   \n",
-       "8                UnitedHealth   (based on 91 salaries)    ₹ 13.6L     ₹ 9.0L   \n",
-       "9                  Ford Motor   (based on 21 salaries)    ₹ 13.5L    ₹ 23.0L   \n",
+       "7                    Tredence   (based on 12 salaries)    ₹ 14.1L     ₹ 8.8L   \n",
+       "8                UnitedHealth   (based on 91 salaries)    ₹ 13.6L     ₹ 8.0L   \n",
+       "9                  Ford Motor   (based on 21 salaries)    ₹ 13.5L    ₹ 10.0L   \n",
        "\n",
-       "                  Exp_Req  \n",
-       "0   based on 22 salaries)  \n",
-       "1   based on 53 salaries)  \n",
-       "2   based on 48 salaries)  \n",
-       "3   based on 33 salaries)  \n",
-       "4  based on 109 salaries)  \n",
-       "5   based on 65 salaries)  \n",
-       "6   based on 11 salaries)  \n",
-       "7   based on 12 salaries)  \n",
-       "8   based on 91 salaries)  \n",
-       "9   based on 21 salaries)  "
+       "  Max_Salary                 Exp_Req  \n",
+       "0    ₹ 45.0L   based on 22 salaries)  \n",
+       "1    ₹ 25.5L   based on 53 salaries)  \n",
+       "2    ₹ 22.6L   based on 48 salaries)  \n",
+       "3    ₹ 22.0L   based on 33 salaries)  \n",
+       "4    ₹ 23.0L  based on 109 salaries)  \n",
+       "5    ₹ 20.0L   based on 65 salaries)  \n",
+       "6    ₹ 20.0L   based on 11 salaries)  \n",
+       "7    ₹ 17.5L   based on 12 salaries)  \n",
+       "8    ₹ 20.5L   based on 91 salaries)  \n",
+       "9    ₹ 18.0L   based on 21 salaries)  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,12 +1753,12 @@
     "    avg=i.text\n",
     "    Avg_Salary.append(avg)\n",
     "\n",
-    "Minimum=driver.find_elements(By.XPATH,'//div[@class=\"value body-medium\"]')\n",
+    "Minimum=driver.find_elements(By.XPATH,'//div[@class=\"salary-values\"]/div[1]')\n",
     "for i in Minimum[:10]:\n",
     "    mn=i.text\n",
     "    Min_Salary.append(mn)\n",
     "    \n",
-    "Maximum=driver.find_elements(By.XPATH,'//div[@class=\"value body-medium\"]')\n",
+    "Maximum=driver.find_elements(By.XPATH,'//div[@class=\"salary-values\"]/div[2]')\n",
     "for i in Maximum[:10]:\n",
     "    mx=i.text\n",
     "    Max_Salary.append(mx)\n",
@@ -1757,14 +1768,14 @@
     "    exp=i.text.split(\"(\")[1]\n",
     "    Exp_Req.append(exp)\n",
     "    \n",
-    "df=pd.DataFrame({'Company_name':Company_name,'Sal_Record':Sal_Record,'Avg_Salary':Avg_Salary,'Min_Salary':Min_Salary,\"Exp_Req\":Exp_Req})\n",
+    "df=pd.DataFrame({'Company_name':Company_name,'Sal_Record':Sal_Record,'Avg_Salary':Avg_Salary,'Min_Salary':Min_Salary,'Max_Salary':Max_Salary,\"Exp_Req\":Exp_Req})\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1973f035",
+   "id": "b4dd6fc9",
    "metadata": {},
    "outputs": [],
    "source": []
