--- a/webscrapping/ass2/Selenium(ASS-2).ipynb
+++ b/webscrapping/ass2/Selenium(ASS-2).ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "790af4dc",
+   "id": "90cff4dd",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0eb78d68",
+   "id": "af2a8e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "21ccf1cd",
+   "id": "be0c7ef0",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d3381d7f",
+   "id": "e091c4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "564ae943",
+   "id": "1a794324",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e18d959d",
+   "id": "e0768817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "630f6b36",
+   "id": "05dbc140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3a6f1dd4",
+   "id": "f4697931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "456d2614",
+   "id": "a18317de",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "48fcf2f9",
+   "id": "16638004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8bc7875f",
+   "id": "4c1f16dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f521d3e8",
+   "id": "f5b78c35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "36dc8e98",
+   "id": "b8f611e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "36828dde",
+   "id": "9e61d395",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1fe77d88",
+   "id": "ed74abeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "53a638b9",
+   "id": "06e4c146",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "11a05a40",
+   "id": "8a746d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0d7f3160",
+   "id": "d0e90aa8",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "be224b29",
+   "id": "60f6a6c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "633931f2",
+   "id": "60a0bd26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e5cf24ed",
+   "id": "671b794d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "78a7106b",
+   "id": "e5d02440",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "20202461",
+   "id": "0f3790b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "5ab03955",
+   "id": "0475cd60",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ed2e0b96",
+   "id": "ece24c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "c48581c1",
+   "id": "df302c92",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9772027f",
+   "id": "3e883157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,8 +1571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "3d8c3367",
+   "execution_count": 84,
+   "id": "79dec95b",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
        "      <td>₹ 31.7L</td>\n",
        "      <td>₹ 25.0L</td>\n",
        "      <td>₹ 45.0L</td>\n",
-       "      <td>based on 22 salaries)</td>\n",
+       "      <td>3-4 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1621,7 +1621,7 @@
        "      <td>₹ 19.7L</td>\n",
        "      <td>₹ 15.0L</td>\n",
        "      <td>₹ 25.5L</td>\n",
-       "      <td>based on 53 salaries)</td>\n",
+       "      <td>2-4 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1630,7 +1630,7 @@
        "      <td>₹ 16.5L</td>\n",
        "      <td>₹ 11.0L</td>\n",
        "      <td>₹ 22.6L</td>\n",
-       "      <td>based on 48 salaries)</td>\n",
+       "      <td>2-4 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1639,7 +1639,7 @@
        "      <td>₹ 15.7L</td>\n",
        "      <td>₹ 11.0L</td>\n",
        "      <td>₹ 22.0L</td>\n",
-       "      <td>based on 33 salaries)</td>\n",
+       "      <td>1-2 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1648,7 +1648,7 @@
        "      <td>₹ 15.2L</td>\n",
        "      <td>₹ 9.0L</td>\n",
        "      <td>₹ 23.0L</td>\n",
-       "      <td>based on 109 salaries)</td>\n",
+       "      <td>2-4 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1657,7 +1657,7 @@
        "      <td>₹ 14.7L</td>\n",
        "      <td>₹ 9.0L</td>\n",
        "      <td>₹ 20.0L</td>\n",
-       "      <td>based on 65 salaries)</td>\n",
+       "      <td>2-4 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1666,7 +1666,7 @@
        "      <td>₹ 14.5L</td>\n",
        "      <td>₹ 11.0L</td>\n",
        "      <td>₹ 20.0L</td>\n",
-       "      <td>based on 11 salaries)</td>\n",
+       "      <td>4 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1675,7 +1675,7 @@
        "      <td>₹ 14.1L</td>\n",
        "      <td>₹ 8.8L</td>\n",
        "      <td>₹ 17.5L</td>\n",
-       "      <td>based on 12 salaries)</td>\n",
+       "      <td>3 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1684,7 +1684,7 @@
        "      <td>₹ 13.6L</td>\n",
        "      <td>₹ 8.0L</td>\n",
        "      <td>₹ 20.5L</td>\n",
-       "      <td>based on 91 salaries)</td>\n",
+       "      <td>2-4 yrs experience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1693,7 +1693,7 @@
        "      <td>₹ 13.5L</td>\n",
        "      <td>₹ 10.0L</td>\n",
        "      <td>₹ 18.0L</td>\n",
-       "      <td>based on 21 salaries)</td>\n",
+       "      <td>3-4 yrs experience</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1712,20 +1712,20 @@
        "8                UnitedHealth   (based on 91 salaries)    ₹ 13.6L     ₹ 8.0L   \n",
        "9                  Ford Motor   (based on 21 salaries)    ₹ 13.5L    ₹ 10.0L   \n",
        "\n",
-       "  Max_Salary                 Exp_Req  \n",
-       "0    ₹ 45.0L   based on 22 salaries)  \n",
-       "1    ₹ 25.5L   based on 53 salaries)  \n",
-       "2    ₹ 22.6L   based on 48 salaries)  \n",
-       "3    ₹ 22.0L   based on 33 salaries)  \n",
-       "4    ₹ 23.0L  based on 109 salaries)  \n",
-       "5    ₹ 20.0L   based on 65 salaries)  \n",
-       "6    ₹ 20.0L   based on 11 salaries)  \n",
-       "7    ₹ 17.5L   based on 12 salaries)  \n",
-       "8    ₹ 20.5L   based on 91 salaries)  \n",
-       "9    ₹ 18.0L   based on 21 salaries)  "
+       "  Max_Salary              Exp_Req  \n",
+       "0    ₹ 45.0L  3-4 yrs experience   \n",
+       "1    ₹ 25.5L  2-4 yrs experience   \n",
+       "2    ₹ 22.6L  2-4 yrs experience   \n",
+       "3    ₹ 22.0L  1-2 yrs experience   \n",
+       "4    ₹ 23.0L  2-4 yrs experience   \n",
+       "5    ₹ 20.0L  2-4 yrs experience   \n",
+       "6    ₹ 20.0L    4 yrs experience   \n",
+       "7    ₹ 17.5L    3 yrs experience   \n",
+       "8    ₹ 20.5L  2-4 yrs experience   \n",
+       "9    ₹ 18.0L  3-4 yrs experience   "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1765,7 +1765,7 @@
     "       \n",
     "Experience=driver.find_elements(By.XPATH,'//div[@class=\"sbold-list-header\"]')\n",
     "for i in Experience[:10]:\n",
-    "    exp=i.text.split(\"(\")[1]\n",
+    "    exp=i.text.split(\"(\")[0]\n",
     "    Exp_Req.append(exp)\n",
     "    \n",
     "df=pd.DataFrame({'Company_name':Company_name,'Sal_Record':Sal_Record,'Avg_Salary':Avg_Salary,'Min_Salary':Min_Salary,'Max_Salary':Max_Salary,\"Exp_Req\":Exp_Req})\n",
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4dd6fc9",
+   "id": "2fd0ba71",
    "metadata": {},
    "outputs": [],
    "source": []
